# speech-to-text-diarization

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MODEL_COMPARISON.md  README.md  WORKSPACE_CLEANUP.md  push_to_github.sh  pyproject.toml  quickstart.sh  real.txt  requirements.txt  requirements_mlx.txt  setup.py  speech_to_text_with_diarization.py  transcribe_diarize_mlx.py  whisperx_processor.py
test/: 113195.txt
test_results/: 113195_mlx_transcription.json  113195_mlx_transcription.srt  113195_mlx_transcription.txt
